# idie

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  docker-compose.test.yml  docker-compose.yml
.github/workflows/: audit.yml  deployment.yml  grcov.yml  main.yml  prepare.yml
libs/idienamo/: Cargo.toml
libs/idienamo-derive/: .gitignore  Cargo.toml
libs/idienamo-derive/src/: entity-derive-macro.rs
libs/idienamo/src/: connection.rs  entity.rs  lib.rs  repository.rs
libs/idienamo/src/dyndb/: create_client.rs  create_table.rs  mod.rs  put_item.rs
libs/server/: Cargo.toml
libs/server/src/: database.rs  lib.rs  main.rs
libs/server/src/middlewares/: rate_limiter.rs
libs/server/src/modules/book/: book_controller.rs  book_entity.rs  book_service.rs  mod.rs  routes.rs
libs/server/tests/: books_add.rs
libs/server/tests/common/: extract_json_body.rs  mod.rs
libs/storage/: Cargo.toml
libs/storage-derive/: Cargo.toml
libs/storage-derive/src/: entity-derive-macro.rs
libs/storage/src/: connection.rs  entity.rs  lib.rs  repository.rs
src/: database.rs  main.rs
src/modules/: mod.rs
src/modules/book/: book_service.rs  mod.rs
