[package]
name = "idienamo"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
dynomite = { git = "https://github.com/softprops/dynomite.git" }
rusoto_core = { version = "0.47", default_features = false }
rusoto_dynamodb = { version = "0.47", default_features = false }
futures = "^0.3"
uuid = "0.8"
async-trait = "0.1.52"
shaku = "0.6"
dyn-clone = "1.0.4"
storage = { path = "../storage" }
log = "0.4"
