[package]
name = "idie"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "idie"
path = "src/main.rs"

[lib]
name = "idie"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "^0.3"
dynomite = { git = "https://github.com/softprops/dynomite.git" }
rusoto_core = { version = "0.47", default_features = false }
rusoto_dynamodb = { version = "0.47", default_features = false }
idienamo = { path = "../idienamo" }
storage = { path = "../storage" }
futures = "^0.3"
uuid = "0.8"
shaku = "0.6"
async-trait = "0.1.52"
ratelimit = "0.4.4"
serde = "1.0"
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.9.0"

[dev-dependencies]
anyhow = "1"
